<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/waiting_input"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingBottom="15dp"
            android:text="@string/input_title" />

        <EditText
            android:id="@+id/edtValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <RadioGroup
            android:id="@+id/rdgModeSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tvUnitMainTitle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_convert_main" />

            <RadioButton
                android:id="@+id/rdBitByte"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/unit_bit" />

            <RadioButton
                android:id="@+id/rdByteBit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_byte" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvInpUnitTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/input_unit" />

                <Spinner
                    android:id="@+id/spnInpUnit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvOutUnitTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/output_unit" />

                <Spinner
                    android:id="@+id/spnOutUnit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_calc" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/button_del" />
    </LinearLayout>
</LinearLayout>